blender-softwaregl crashes in 2.76RC3 #46431

Closed
opened 2015-10-09 18:40:47 +02:00 by Bas Wijnen · 11 comments

Due to broken operating system support for my graphics card, I need to use blender-softwaregl to get a usable interface. I'm running Debian GNU/Linux unstable.

Things used to work fine until I upgraded today from blender-2.74-linux-glibc211-x86_64 to blender-2.76-rc3-linux-glibc211-x86_64; blender itself still starts (but has the interface problems), blender-softwaregl segfaults.

/tmp/blender.crash.txt says:

# Blender 2.76 (sub 0), Commit date: 2015-09-30 16:05, Hash fb78f6d

# backtrace
./blender(BLI_system_backtrace+0x1d) [0x1a3d83d]
./blender() [0x1056354]
./blender() [0x1056531]
/lib/x86_64-linux-gnu/libc.so.6(+0x35180) [0xad46180]

When starting it with valgrind, I get these errors:

$ LD_LIBRARY_PATH=./lib valgrind ./blender
==23153== Memcheck, a memory error detector
==23153== Copyright (C) 2002-2015, and GNU GPL'd, by Julian Seward et al.
==23153== Using Valgrind-3.11.0 and LibVEX; rerun with -h for copyright info
==23153== Command: ./blender
==23153== 
connect failed: No such file or directory
==23153== Conditional jump or move depends on uninitialised value(s)
==23153==    at 0x1A79BBC: BLI_ghashIterator_step (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x1266A04: ED_node_init_butfuncs (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x105B3C4: WM_init (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x1058EF5: main (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153== 
==23153== Conditional jump or move depends on uninitialised value(s)
==23153==    at 0x1A79B83: BLI_ghashIterator_step (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x1266A04: ED_node_init_butfuncs (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x105B3C4: WM_init (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x1058EF5: main (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153== 
==23153== Jump to the invalid address stated on the next line
==23153==    at 0x0: ???
==23153==    by 0x26DA647: glewInit (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22DCCC8: mxCreateContext (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B7861: GHOST_Context::initContextGLEW() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B7483: GHOST_ContextGLX::initializeDrawingContext() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B4B10: GHOST_WindowX11::newDrawingContext(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B3CBD: GHOST_Window::setDrawingContextType(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B64B5: GHOST_WindowX11::GHOST_WindowX11(GHOST_SystemX11*, _XDisplay*, STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, int, GHOST_TDrawingContextType, bool, bool, unsigned short, bool) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B080D: GHOST_SystemX11::createWindow(STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, GHOST_TDrawingContextType, GHOST_GLSettings, bool, int) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22AEF86: GHOST_CreateWindow (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x105AE47: wm_window_add_ghostwindows (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x105E7AC: WM_check (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==  Address 0x0 is not stack'd, malloc'd or (recently) free'd
==23153== 
Writing: /tmp/blender.crash.txt
==23153== 
==23153== Process terminating with default action of signal 11 (SIGSEGV)
==23153==    at 0x0: ???
==23153==    by 0x26DA647: glewInit (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22DCCC8: mxCreateContext (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B7861: GHOST_Context::initContextGLEW() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B7483: GHOST_ContextGLX::initializeDrawingContext() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B4B10: GHOST_WindowX11::newDrawingContext(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B3CBD: GHOST_Window::setDrawingContextType(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B64B5: GHOST_WindowX11::GHOST_WindowX11(GHOST_SystemX11*, _XDisplay*, STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, int, GHOST_TDrawingContextType, bool, bool, unsigned short, bool) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22B080D: GHOST_SystemX11::createWindow(STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, GHOST_TDrawingContextType, GHOST_GLSettings, bool, int) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x22AEF86: GHOST_CreateWindow (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x105AE47: wm_window_add_ghostwindows (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153==    by 0x105E7AC: WM_check (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender)
==23153== 
==23153== HEAP SUMMARY:
==23153==     in use at exit: 0 bytes in 0 blocks
==23153==   total heap usage: 0 allocs, 0 frees, 0 bytes allocated
==23153== 
==23153== All heap blocks were freed -- no leaks are possible
==23153== 
==23153== For counts of detected and suppressed errors, rerun with: -v
==23153== Use --track-origins=yes to see where uninitialised values come from
==23153== ERROR SUMMARY: 11 errors from 3 contexts (suppressed: 1 from 1)
Killed

Gdb gives me this backtrace:

$ LD_LIBRARY_PATH=./lib gdb ./blender
GNU gdb (Debian 7.10-1) 7.10
Copyright (C) 2015 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from ./blender...(no debugging symbols found)...done.
(gdb) run
Starting program: /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fffeec62700 (LWP 23619)]
[New Thread 0x7fffee461700 (LWP 23620)]
connect failed: No such file or directory
[New Thread 0x7fffed675700 (LWP 23621)]
[Thread 0x7fffed675700 (LWP 23621) exited]
[New Thread 0x7fffed675700 (LWP 23622)]
[New Thread 0x7ffff7f39700 (LWP 23623)]
[New Thread 0x7fffe3fff700 (LWP 23624)]
[Thread 0x7fffe3fff700 (LWP 23624) exited]

Program received signal SIGSEGV, Segmentation fault.
0x0000000000000000 in ?? ()
(gdb) bt full
#0  0x0000000000000000 in ?? ()
No symbol table info available.
#1  0x00000000026da648 in glewInit ()
No symbol table info available.
#2  0x00000000022dccc9 in mxCreateContext ()
No symbol table info available.
#3  0x00000000022b7862 in GHOST_Context::initContextGLEW() ()
No symbol table info available.
#4  0x00000000022b7484 in GHOST_ContextGLX::initializeDrawingContext() ()
No symbol table info available.
#5  0x00000000022b4b11 in GHOST_WindowX11::newDrawingContext(GHOST_TDrawingContextType) ()
No symbol table info available.
#6  0x00000000022b3cbe in GHOST_Window::setDrawingContextType(GHOST_TDrawingContextType) ()
No symbol table info available.
#7  0x00000000022b64b6 in GHOST_WindowX11::GHOST_WindowX11(GHOST_SystemX11*, _XDisplay*, STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, int, GHOST_TDrawingContextType, bool, bool, unsigned short, bool) ()
No symbol table info available.
#8  0x00000000022b080e in GHOST_SystemX11::createWindow(STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, GHOST_TDrawingContextType, GHOST_GLSettings, bool, int) ()
No symbol table info available.
#9  0x00000000022aef87 in GHOST_CreateWindow ()
No symbol table info available.
#10 0x000000000105ae48 in wm_window_add_ghostwindows ()
No symbol table info available.
#11 0x000000000105e7ad in WM_check ()
No symbol table info available.
#12 0x000000000105f951 in wm_homefile_read ()
No symbol table info available.
#13 0x000000000105b400 in WM_init ()
No symbol table info available.
#14 0x0000000001058ef6 in main ()
No symbol table info available.
(gdb) 

Let me know if you need more information.

Due to broken operating system support for my graphics card, I need to use blender-softwaregl to get a usable interface. I'm running Debian GNU/Linux unstable. Things used to work fine until I upgraded today from blender-2.74-linux-glibc211-x86_64 to blender-2.76-rc3-linux-glibc211-x86_64; blender itself still starts (but has the interface problems), blender-softwaregl segfaults. /tmp/blender.crash.txt says: ``` # Blender 2.76 (sub 0), Commit date: 2015-09-30 16:05, Hash fb78f6d # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1a3d83d] ./blender() [0x1056354] ./blender() [0x1056531] /lib/x86_64-linux-gnu/libc.so.6(+0x35180) [0xad46180] ``` When starting it with valgrind, I get these errors: ``` $ LD_LIBRARY_PATH=./lib valgrind ./blender ==23153== Memcheck, a memory error detector ==23153== Copyright (C) 2002-2015, and GNU GPL'd, by Julian Seward et al. ==23153== Using Valgrind-3.11.0 and LibVEX; rerun with -h for copyright info ==23153== Command: ./blender ==23153== connect failed: No such file or directory ==23153== Conditional jump or move depends on uninitialised value(s) ==23153== at 0x1A79BBC: BLI_ghashIterator_step (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x1266A04: ED_node_init_butfuncs (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x105B3C4: WM_init (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x1058EF5: main (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== ==23153== Conditional jump or move depends on uninitialised value(s) ==23153== at 0x1A79B83: BLI_ghashIterator_step (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x1266A04: ED_node_init_butfuncs (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x105B3C4: WM_init (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x1058EF5: main (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== ==23153== Jump to the invalid address stated on the next line ==23153== at 0x0: ??? ==23153== by 0x26DA647: glewInit (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22DCCC8: mxCreateContext (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B7861: GHOST_Context::initContextGLEW() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B7483: GHOST_ContextGLX::initializeDrawingContext() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B4B10: GHOST_WindowX11::newDrawingContext(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B3CBD: GHOST_Window::setDrawingContextType(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B64B5: GHOST_WindowX11::GHOST_WindowX11(GHOST_SystemX11*, _XDisplay*, STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, int, GHOST_TDrawingContextType, bool, bool, unsigned short, bool) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B080D: GHOST_SystemX11::createWindow(STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, GHOST_TDrawingContextType, GHOST_GLSettings, bool, int) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22AEF86: GHOST_CreateWindow (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x105AE47: wm_window_add_ghostwindows (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x105E7AC: WM_check (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== Address 0x0 is not stack'd, malloc'd or (recently) free'd ==23153== Writing: /tmp/blender.crash.txt ==23153== ==23153== Process terminating with default action of signal 11 (SIGSEGV) ==23153== at 0x0: ??? ==23153== by 0x26DA647: glewInit (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22DCCC8: mxCreateContext (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B7861: GHOST_Context::initContextGLEW() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B7483: GHOST_ContextGLX::initializeDrawingContext() (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B4B10: GHOST_WindowX11::newDrawingContext(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B3CBD: GHOST_Window::setDrawingContextType(GHOST_TDrawingContextType) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B64B5: GHOST_WindowX11::GHOST_WindowX11(GHOST_SystemX11*, _XDisplay*, STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, int, GHOST_TDrawingContextType, bool, bool, unsigned short, bool) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22B080D: GHOST_SystemX11::createWindow(STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, GHOST_TDrawingContextType, GHOST_GLSettings, bool, int) (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x22AEF86: GHOST_CreateWindow (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x105AE47: wm_window_add_ghostwindows (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== by 0x105E7AC: WM_check (in /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender) ==23153== ==23153== HEAP SUMMARY: ==23153== in use at exit: 0 bytes in 0 blocks ==23153== total heap usage: 0 allocs, 0 frees, 0 bytes allocated ==23153== ==23153== All heap blocks were freed -- no leaks are possible ==23153== ==23153== For counts of detected and suppressed errors, rerun with: -v ==23153== Use --track-origins=yes to see where uninitialised values come from ==23153== ERROR SUMMARY: 11 errors from 3 contexts (suppressed: 1 from 1) Killed ``` Gdb gives me this backtrace: ``` $ LD_LIBRARY_PATH=./lib gdb ./blender GNU gdb (Debian 7.10-1) 7.10 Copyright (C) 2015 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "x86_64-linux-gnu". Type "show configuration" for configuration details. For bug reporting instructions, please see: <http://www.gnu.org/software/gdb/bugs/>. Find the GDB manual and other documentation resources online at: <http://www.gnu.org/software/gdb/documentation/>. For help, type "help". Type "apropos word" to search for commands related to "word"... Reading symbols from ./blender...(no debugging symbols found)...done. (gdb) run Starting program: /home/shevek/tmp/blender-2.76-rc3-linux-glibc211-x86_64/blender [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1". [New Thread 0x7fffeec62700 (LWP 23619)] [New Thread 0x7fffee461700 (LWP 23620)] connect failed: No such file or directory [New Thread 0x7fffed675700 (LWP 23621)] [Thread 0x7fffed675700 (LWP 23621) exited] [New Thread 0x7fffed675700 (LWP 23622)] [New Thread 0x7ffff7f39700 (LWP 23623)] [New Thread 0x7fffe3fff700 (LWP 23624)] [Thread 0x7fffe3fff700 (LWP 23624) exited] Program received signal SIGSEGV, Segmentation fault. 0x0000000000000000 in ?? () (gdb) bt full #0 0x0000000000000000 in ?? () No symbol table info available. #1 0x00000000026da648 in glewInit () No symbol table info available. #2 0x00000000022dccc9 in mxCreateContext () No symbol table info available. #3 0x00000000022b7862 in GHOST_Context::initContextGLEW() () No symbol table info available. #4 0x00000000022b7484 in GHOST_ContextGLX::initializeDrawingContext() () No symbol table info available. #5 0x00000000022b4b11 in GHOST_WindowX11::newDrawingContext(GHOST_TDrawingContextType) () No symbol table info available. #6 0x00000000022b3cbe in GHOST_Window::setDrawingContextType(GHOST_TDrawingContextType) () No symbol table info available. #7 0x00000000022b64b6 in GHOST_WindowX11::GHOST_WindowX11(GHOST_SystemX11*, _XDisplay*, STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, int, GHOST_TDrawingContextType, bool, bool, unsigned short, bool) () No symbol table info available. #8 0x00000000022b080e in GHOST_SystemX11::createWindow(STR_String const&, int, int, unsigned int, unsigned int, GHOST_TWindowState, GHOST_TDrawingContextType, GHOST_GLSettings, bool, int) () No symbol table info available. #9 0x00000000022aef87 in GHOST_CreateWindow () No symbol table info available. #10 0x000000000105ae48 in wm_window_add_ghostwindows () No symbol table info available. #11 0x000000000105e7ad in WM_check () No symbol table info available. #12 0x000000000105f951 in wm_homefile_read () No symbol table info available. #13 0x000000000105b400 in WM_init () No symbol table info available. #14 0x0000000001058ef6 in main () No symbol table info available. (gdb) ``` Let me know if you need more information.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @wijnen

Added subscriber: @wijnen
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscribers: @Sergey, @ideasman42, @mont29

Added subscribers: @Sergey, @ideasman42, @mont29

Fantastic… I can confirm this here (debian64 testing) with 2.76RC3, but not with own build of current master.

@Sergey, @ideasman42, ideas?

Fantastic… I can confirm this here (debian64 testing) with 2.76RC3, but **not** with own build of current master. @Sergey, @ideasman42, ideas?
Bastien Montagne changed title from blender-softwaregl no longer works to blender-softwaregl crashes in 2.76RC3 2015-10-09 22:40:48 +02:00
Member

@mont29 I dont see the point of removing the #bf_blender project

@mont29 I dont see the point of removing the #bf_blender project

This is caused by 86e6d66 done by @campbellbarton. Seems it's in fact crucial to have context initialized before calling glewInit().

The whole logic around check GLXEW_ARB_create_context seems to be broken in fact. Even with proper nvidia driver here first time drawing context is being initialized GLXEW_ARB_create_context is set to 0 here, but when second window is creating GLXEW_ARB_create_context is set to 1.

This is caused by 86e6d66 done by @campbellbarton. Seems it's in fact crucial to have context initialized before calling `glewInit()`. The whole logic around check `GLXEW_ARB_create_context` seems to be broken in fact. Even with proper nvidia driver here first time drawing context is being initialized `GLXEW_ARB_create_context` is set to 0 here, but when second window is creating `GLXEW_ARB_create_context` is set to 1.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2015-10-10 11:39:14 +02:00
Member

Fixed in f42ae6c569, assuming this can be closed.

Fixed in f42ae6c569, assuming this can be closed.

This issue was referenced by 9cea429f78

This issue was referenced by 9cea429f787727d8a19b9dfe179a5b7ba2d92fd0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46431
No description provided.