Fix/Workaround T46431: blender-softwaregl crashes

Order of initialization bug only impacted mesa's software-gl.

For now effectively revert support for glx-context-flags.